2011-12-20  David Williams <dwilliams@ricohsv.com>
	* db/source/printer/Lanier-SP_5200DN.xml,
	  db/source/printer/Lanier-SP_5200S.xml,
	  db/source/printer/Lanier-SP_5210DN.xml,
	  db/source/printer/Lanier-SP_5210SF.xml,
	  db/source/printer/Lanier-SP_5210SR.xml,
	  db/source/printer/Ricoh-Aficio_SP_5200DN.xml,
	  db/source/printer/Ricoh-Aficio_SP_5200S.xml,
	  db/source/printer/Ricoh-Aficio_SP_5210DN.xml,
	  db/source/printer/Ricoh-Aficio_SP_5210SF.xml,
	  db/source/printer/Ricoh-Aficio_SP_5210SR.xml,
	  db/source/printer/Savin-SP_5200DN.xml,
	  db/source/printer/Savin-SP_5200S.xml,
	  db/source/printer/Savin-SP_5210DN.xml,
	  db/source/printer/Savin-SP_5210SF.xml,
	  db/source/printer/Savin-SP_5210SR.xml: changed manufacturer name from upper-case to lower-case.

2011-12-10  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/driver/splix.xml: Updated comment text.

2011-12-08  David Williams <dwilliams@ricohsv.com>

	* db/source/PPD/NRG/PS/NRG-SP_5210SR_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-SP_5210DN_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-SP_5210SF_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-SP_5200DN_PS.ppd,
	  db/source/PPD/NRG/PS/NRG-SP_5200S_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_5210SR_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_5210DN_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_5210SF_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_5200DN_PS.ppd,
	  db/source/PPD/Ricoh/PS/Ricoh-Aficio_SP_5200S_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-SP_5210SF_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-SP_5210SR_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-SP_5210DN_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-SP_5200S_PS.ppd,
	  db/source/PPD/Savin/PS/Savin-SP_5200DN_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-SP_5210SR_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-SP_5210DN_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-SP_5210SF_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-SP_5200DN_PS.ppd,
	  db/source/PPD/Lanier/PS/Lanier-SP_5200S_PS.ppd: Added PS PPDs for 20 new printers.
