@@ -157,6 +157,9 @@
       <id>printer/Epson-LP-S3000</id>
     </printer>
     <printer>
+      <id>printer/Epson-LP-S3200</id>
+    </printer>
+    <printer>
       <id>printer/Epson-LP-S3500</id>
     </printer>
     <printer>
