@@ -904,6 +904,9 @@
           <printer>printer/Epson-LP-S3000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S3200</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S3500</printer>
         </constraint>
         <constraint sense="false">
@@ -1023,6 +1026,9 @@
           <printer>printer/Epson-LP-S3000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S3200</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S3500</printer>
         </constraint>
         <constraint sense="false">
@@ -1136,6 +1142,9 @@
           <printer>printer/Epson-LP-S3000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S3200</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S3500</printer>
         </constraint>
         <constraint sense="false">
@@ -1247,6 +1256,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S3000</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S3200</printer>
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S3500</printer>
