@@ -205,6 +205,11 @@
     </constraint>
     <constraint sense="true">
       <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S3200</printer>
+      <arg_defval>ev/eplaser-jp-Model-lps3200</arg_defval>
+    </constraint>
+    <constraint sense="true">
+      <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-S3500</printer>
       <arg_defval>ev/eplaser-jp-Model-lps3500</arg_defval>
     </constraint>
@@ -921,6 +926,24 @@
         <constraint sense="true">
           <driver>eplaser-jp</driver>
           <printer>printer/Epson-LP-S3000</printer>
+        </constraint>
+      </constraints>
+    </enum_val>
+    <enum_val id="ev/eplaser-jp-Model-lps3200">
+      <ev_longname>
+        <en>Epson LP-S3200</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>lps3200</en>
+      </ev_shortname>
+      <ev_driverval>lp8700</ev_driverval>
+      <constraints>
+        <constraint sense="false">
+          <driver>eplaser-jp</driver>
+        </constraint>
+        <constraint sense="true">
+          <driver>eplaser-jp</driver>
+          <printer>printer/Epson-LP-S3200</printer>
         </constraint>
       </constraints>
     </enum_val>
