@@ -1,3 +1,6 @@
+2011-12-07  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
+	* db/source/printer/Epson-LP-S3200.xml: Added a new printer.xml
+
 2011-12-20  David Williams <dwilliams@ricohsv.com>
 	* db/source/printer/Lanier-SP_5200DN.xml,
 	  db/source/printer/Lanier-SP_5200S.xml,
@@ -64,7 +67,7 @@
 	  db/source/printer/Savin-SP_5210SR.xml: Added XML info files for 20 new printers.
 
 2011-12-07  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
-	* db/source/printer/db/source/printer/Epson-Artisan_630_Series.xml,
+	* /db/source/printer/Epson-Artisan_630_Series.xml,
          db/source/printer/Epson-Artisan_730_Series.xml,
          db/source/printer/Epson-Artisan_837_Series.xml,
          db/source/printer/Epson-BX305_Plus_Series.xml,
